form changes + packages table

--- a/index.html
+++ b/index.html
@@ -54,14 +54,13 @@
         <div id="mc_embed_shell">
           <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
     <div id="mc_embed_signup">
-        <form action="https://gmail.us21.list-manage.com/subscribe/post?u=35249f985b7447f4c62721867&amp;id=b78f558047&amp;f_id=002cf7e6f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-            <div id="mc_embed_signup_scroll">
+      <form action="https://gmail.us12.list-manage.com/subscribe/post?u=51d149a78de3d19aa6c88aaef&amp;id=04dcf74629&amp;f_id=00f846e0f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">            
+        <div id="mc_embed_signup_scroll">
                 <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div>
-                <div class="mc-field-group"><label for="mce-LNAME">Name <span class="asterisk">*</span></label><input type="text" name="LNAME" class="required text" id="mce-LNAME" value="" required=""></div>
-                <div class="mc-field-group"><label for="mce-PHONE">Phone Number <span class="asterisk">*</span></label><input type="text" name="PHONE" class="REQ_CSS" id="mce-PHONE" required="" value=""></div>
-                <div class="mc-field-group size2of2"><label for="mce-FNAME">Car<span class="asterisk">*</span> </label>
-                  <!-- <input type="text" name="FNAME" class=" text" id="mce-FNAME" value=""> -->
-                  <select class="form-select ps-2" type="text" name="FNAME"  id="mce-FNAME" required="">
+                <div class="mc-field-group"><label for="mce-FNAME">Name <span class="asterisk">*</span></label><input type="text" name="FNAME" class="required text" id="mce-FNAME" required="" value=""></div>
+                <div class="mc-field-group"><label for="mce-PHONE">Phone Number <span class="asterisk">*</span></label><input type="text" name="PHONE" class="REQ_CSS" id="mce-PHONE" value=""></div>
+                <div class="mc-field-group"><label for="mce-CAR">Car </label>
+                  <select class="form-select ps-2" type="text" name="CAR"  id="mce-CAR" required="">
                     <option selected>Select a car here</option>
                     <option value="Swift(2015) Black">Swift Black</option>
                     <option value="Swift Dzire(2019)">Swift Dzire</option>
@@ -70,11 +69,11 @@
                     <option value="Ford Ecosport">Innova</option>
                   </select>
                 </div>
-                <div class="mc-field-group size1of2"><label for="mce-VTIME">Start Date</label>
-                  <input type="datetime-local" name="VTIME" class=" text" id="mce-VTIME" value="">
+                <div class="mc-field-group size1of2"><label for="mce-SDATE">Start Date</label>
+                  <input type="datetime-local" name="SDATE" class="datefield" id="mce-SDATE" value="">
                 </div>
-                <div class="mc-field-group size1of2"><label for="mce1-VTIME">End Date</label>
-                  <input type="datetime-local" name="VTIME" class=" text" id="mce1-VTIME" value="">
+                <div class="mc-field-group size1of2"><label for="mce-EDATE">End Date</label>
+                  <input type="datetime-local" name="EDATE" class="datefield" id="mce-EDATE" value="">
                 </div>
                   <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
                 </div>
@@ -93,8 +92,9 @@
               </div>
             </div>
         </div>
-    </form>
+      </form>
     </div>
+    <!-- <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[4]='PHONE';ftypes[4]='phone';fnames[7]='CAR';ftypes[7]='text';fnames[2]='SDATE';ftypes[2]='text';fnames[8]='EDATE';ftypes[8]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[5]='MMERGE5';ftypes[5]='date';fnames[6]='MMERGE6';ftypes[6]='date';}(jQuery));var $mcj = jQuery.noConflict(true);</script> -->
     <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[2]='LNAME';ftypes[2]='text';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';fnames[1]='FNAME';ftypes[1]='text';fnames[3]='ADDRESS';ftypes[3]='address';}(jQuery));var $mcj = jQuery.noConflict(true);</script>    
     </div>
 
@@ -177,7 +177,7 @@
     <h1>Economi Car Rentals</h1>
     <p>Crafting beautiful smiles, one appointment at a time.</p>
     <p>Our dedicated team combines expertise with a caring touch. Trust us for precision dentistry, exceptional service, and a renewed sense of confidence.</p>
-    <a href="./services.html" class="fylo-works">See our user experiences <img src="./images/icon-arrow.svg" alt="arrow" width="25px"> </a>
+    <a href="#productive" class="fylo-works">See our user experiences <img src="./images/icon-arrow.svg" alt="arrow" width="25px"> </a>
     
     <div class="album py-5">
       <div class="container">
@@ -186,13 +186,13 @@
           <div class="col">
             <div class="card shadow-sm">
               <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
-              <img src="./images/car_list/swift.jpeg" class="bd-placeholder-img card-img-top" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail" focusable="false" alt="maruti swift car" style="object-fit: cover;">
+              <img src="./images/car_list/swift_black.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail" focusable="false" alt="maruti swift car" style="object-fit: cover;">
               <div class="card-body">
-                <p class="card-text"><strong>Maruti Swift</strong> 5 Seater(4+1) <br><strong>Price:</strong>₹25/Km</p>
+                <p class="card-text"><strong>Maruti Swift (Black)</strong> 5 Seater(4+1) <br><strong>Price:</strong>₹25/Km</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-outline-success" onclick="location.href='tel:8106993719'">Call Us</button>
-                    <button type="button" class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="copyEmail()">Book Now</button>
+                    <button type="button" class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="copyCar(1)">Book Now</button>
                   </div>
                 </div>
               </div>
@@ -201,13 +201,13 @@
           <div class="col">
             <div class="card shadow-sm">
               <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
-              <img src="./images/car_list/swift.jpeg" class="bd-placeholder-img card-img-top" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail" focusable="false" alt="maruti swift car" style="object-fit: cover;">
+              <img src="./images/car_list/swift_dzire.avif" class="bd-placeholder-img card-img-top" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail" focusable="false" alt="maruti swift car" style="object-fit: cover;">
               <div class="card-body">
-                <p class="card-text"><strong>Maruti Swift</strong> 5 Seater(4+1) <br><strong>Price:</strong>₹25/Km</p>
+                <p class="card-text"><strong>Maruti Swift Dzire</strong> 5 Seater(4+1) <br><strong>Price:</strong>₹25/Km</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-outline-success" onclick="location.href='tel:8106993719'">Call Us</button>
-                    <button type="button" class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="copyEmail()">Book Now</button>
+                    <button type="button" class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="copyCar(2)">Book Now</button>
                   </div>
                 </div>
               </div>
@@ -216,13 +216,13 @@
           <div class="col">
             <div class="card shadow-sm">
               <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
-              <img src="./images/car_list/swift.jpeg" class="bd-placeholder-img card-img-top" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail" focusable="false" alt="maruti swift car" style="object-fit: cover;">
+              <img src="./images/car_list/ecosport.webp" class="bd-placeholder-img card-img-top" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail" focusable="false" alt="maruti swift car" style="object-fit: cover;">
               <div class="card-body">
-                <p class="card-text"><strong>Maruti Swift</strong> 5 Seater(4+1) <br><strong>Price:</strong>₹25/Km</p>
+                <p class="card-text"><strong>Ford Ecosport</strong> 5 Seater(4+1) <br><strong>Price:</strong>₹25/Km</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-outline-success" onclick="location.href='tel:8106993719'">Call Us</button>
-                    <button type="button" class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="copyEmail()">Book Now</button>
+                    <button type="button" class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="copyCar(4)">Book Now</button>
                   </div>
                 </div>
               </div>
@@ -231,13 +231,13 @@
           <div class="col">
             <div class="card shadow-sm">
               <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
-              <img src="./images/car_list/swift.jpeg" class="bd-placeholder-img card-img-top" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail" focusable="false" alt="maruti swift car" style="object-fit: cover;">
+              <img src="./images/car_list/innova.jpeg" class="bd-placeholder-img card-img-top" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail" focusable="false" alt="maruti swift car" style="object-fit: cover;">
               <div class="card-body">
-                <p class="card-text"><strong>Maruti Swift</strong> 5 Seater(4+1) <br><strong>Price:</strong>₹25/Km</p>
+                <p class="card-text"><strong>Innova Crysta</strong> 7 Seater(6+1) <br><strong>Price:</strong>₹65/Km</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-outline-success" onclick="location.href='tel:8106993719'">Call Us</button>
-                    <button type="button" class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="copyEmail()">Book Now</button>
+                    <button type="button" class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="copyCar(3)">Book Now</button>
                   </div>
                 </div>
               </div>
@@ -246,13 +246,13 @@
           <div class="col">
             <div class="card shadow-sm">
               <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
-              <img src="./images/car_list/swift.jpeg" class="bd-placeholder-img card-img-top" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail" focusable="false" alt="maruti swift car" style="object-fit: cover;">
+              <img src="./images/car_list/dzire_gold.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail" focusable="false" alt="maruti swift car" style="object-fit: cover;">
               <div class="card-body">
-                <p class="card-text"><strong>Maruti Swift</strong> 5 Seater(4+1) <br><strong>Price:</strong>₹25/Km</p>
+                <p class="card-text"><strong>Maruti Swift Dzire</strong> 5 Seater(4+1) <br><strong>Price:</strong>₹25/Km</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-outline-success" onclick="location.href='tel:8106993719'">Call Us</button>
-                    <button type="button" class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="copyEmail()">Book Now</button>
+                    <button type="button" class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="copyCar(2)">Book Now</button>
                   </div>
                 </div>
               </div>
@@ -261,13 +261,13 @@
           <div class="col">
             <div class="card shadow-sm">
               <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
-              <img src="./images/car_list/swift.jpeg" class="bd-placeholder-img card-img-top" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail" focusable="false" alt="maruti swift car" style="object-fit: cover;">
+              <img src="./images/car_list/etios.webp" class="bd-placeholder-img card-img-top" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail" focusable="false" alt="maruti swift car" style="object-fit: cover;">
               <div class="card-body">
-                <p class="card-text"><strong>Maruti Swift</strong> 5 Seater(4+1) <br><strong>Price:</strong>₹25/Km</p>
+                <p class="card-text"><strong>Toyota Etios</strong> 5 Seater(4+1) <br><strong>Price:</strong>₹35/Km</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-outline-success" onclick="location.href='tel:8106993719'">Call Us</button>
-                    <button type="button" class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="copyEmail()">Book Now</button>
+                    <button type="button" class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="copyCar(2)">Book Now</button>
                   </div>
                 </div>
               </div>
@@ -489,26 +489,21 @@
       const email = document.getElementById("userMail").value;
       document.getElementById("mce-EMAIL").value=email;
       document.getElementById("userMail").value="";
-      document.getElementById("mce-VTIME").value=setDate();
-      document.getElementById("mce1-VTIME").value=setDate();
+      document.getElementById("mce-SDATE").value=setDate();
+      document.getElementById("mce-EDATE").value=setDate();
 
     }
-    function copylocation(e){
-      let locate = e;
-      switch (locate) {
-          case 1: document.getElementById("mce-FNAME").value="Chanda nagar, Hyd";
-            break;
-          case 2: document.getElementById("mce-FNAME").value="Dhone";
-            break;
-          case 3: document.getElementById("mce-FNAME").value="Yemmiganur";
-            break;
-          case 4: document.getElementById("mce-FNAME").value="Betamcherla";
-            break;
-          default:
-            break;
-        };
-        document.getElementById("mce-VTIME").value=setDate();
-        document.getElementById("mce1-VTIME").value=setDate();
+
+    function copyCar(car){
+
+      console.log(car);
+      const email = document.getElementById("userMail").value;
+      document.getElementById("mce-EMAIL").value=email;
+      document.getElementById("userMail").value="";
+      document.getElementById("mce-CAR").selectedIndex = car;
+      // document.getElementById("mce-CAR").value=car;
+      document.getElementById("mce-SDATE").value=setDate();
+      document.getElementById("mce-EDATE").value=setDate();
 
     }
     
