--- a/services.html
+++ b/services.html
@@ -52,110 +52,246 @@
   
   
   <!-- Scrollable modal -->
-  <section class="modal_form">
-    <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Enquire Now</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <div id="mc_embed_shell">
-            <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
-      <div id="mc_embed_signup">
-          <form action="https://gmail.us21.list-manage.com/subscribe/post?u=35249f985b7447f4c62721867&amp;id=b78f558047&amp;f_id=002cf7e6f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-              <div id="mc_embed_signup_scroll">
-                  <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div>
-                  <div class="mc-field-group"><label for="mce-LNAME">Name <span class="asterisk">*</span></label><input type="text" name="LNAME" class="required text" id="mce-LNAME" value="" required=""></div>
-                  <div class="mc-field-group"><label for="mce-PHONE">Phone Number <span class="asterisk">*</span></label><input type="text" name="PHONE" class="REQ_CSS" id="mce-PHONE" required="" value=""></div>
-                  <div class="mc-field-group size2of2"><label for="mce-FNAME">Car<span class="asterisk">*</span> </label>
-                    <!-- <input type="text" name="FNAME" class=" text" id="mce-FNAME" value=""> -->
-                    <select class="form-select ps-2" type="text" name="FNAME"  id="mce-FNAME" required="">
-                      <option selected>Select a car here</option>
-                      <option value="Swift(2015) Black">Swift Black</option>
-                      <option value="Swift Dzire(2019)">Swift Dzire</option>
-                      <option value="Innova Crysta">Innova Crysta</option>
-                      <option value="Ford Ecosport">Ford Ecosport</option>
-                      <option value="Ford Ecosport">Innova</option>
-                    </select>
-                  </div>
-                  <div class="mc-field-group size1of2"><label for="mce-VTIME">Start Date</label>
-                    <input type="datetime-local" name="VTIME" class=" text" id="mce-VTIME" value="">
-                  </div>
-                  <div class="mc-field-group size1of2"><label for="mce1-VTIME">End Date</label>
-                    <input type="datetime-local" name="VTIME" class=" text" id="mce1-VTIME" value="">
-                  </div>
-                    <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-                  </div>
-              <div id="mce-responses" class="clear foot">
-                  <div class="response" id="mce-error-response" style="display: none;"></div>
-                  <div class="response" id="mce-success-response" style="display: none;"></div>
-              </div>
-          <div aria-hidden="true" style="position: absolute; left: -5000px;">
-              /* real people should not fill this in and expect good things - do not remove this or risk form bot signups */
-              <input type="text" name="b_8bef7c3b59064e282f5a0a650_6652467aee" tabindex="-1" value="">
-          </div>
-              <div class="optionalParent">
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                  <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary" >Book now!</button>
+<section class="modal_form">
+  <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Enquire Now</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div id="mc_embed_shell">
+          <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+    <div id="mc_embed_signup">
+      <form action="https://gmail.us12.list-manage.com/subscribe/post?u=51d149a78de3d19aa6c88aaef&amp;id=04dcf74629&amp;f_id=00f846e0f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">            
+        <div id="mc_embed_signup_scroll">
+                <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div>
+                <div class="mc-field-group"><label for="mce-FNAME">Name <span class="asterisk">*</span></label><input type="text" name="FNAME" class="required text" id="mce-FNAME" required="" value=""></div>
+                <div class="mc-field-group"><label for="mce-PHONE">Phone Number <span class="asterisk">*</span></label><input type="text" name="PHONE" class="REQ_CSS" id="mce-PHONE" value=""></div>
+                <div class="mc-field-group"><label for="mce-CAR">Car </label>
+                  <select class="form-select ps-2" type="text" name="CAR"  id="mce-CAR" required="">
+                    <option selected>Select a car here</option>
+                    <option value="Swift(2015) Black">Swift Black</option>
+                    <option value="Swift Dzire(2019)">Swift Dzire</option>
+                    <option value="Innova Crysta">Innova Crysta</option>
+                    <option value="Ford Ecosport">Ford Ecosport</option>
+                    <option value="Ford Ecosport">Innova</option>
+                  </select>
                 </div>
+                <div class="mc-field-group size1of2"><label for="mce-SDATE">Start Date</label>
+                  <input type="datetime-local" name="SDATE" class="datefield" id="mce-SDATE" value="">
+                </div>
+                <div class="mc-field-group size1of2"><label for="mce-EDATE">End Date</label>
+                  <input type="datetime-local" name="EDATE" class="datefield" id="mce-EDATE" value="">
+                </div>
+                  <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                </div>
+            <div id="mce-responses" class="clear foot">
+                <div class="response" id="mce-error-response" style="display: none;"></div>
+                <div class="response" id="mce-success-response" style="display: none;"></div>
+            </div>
+        <div aria-hidden="true" style="position: absolute; left: -5000px;">
+            /* real people should not fill this in and expect good things - do not remove this or risk form bot signups */
+            <input type="text" name="b_8bef7c3b59064e282f5a0a650_6652467aee" tabindex="-1" value="">
+        </div>
+            <div class="optionalParent">
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary" >Book now!</button>
               </div>
-          </div>
+            </div>
+        </div>
       </form>
-      </div>
-      <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[2]='LNAME';ftypes[2]='text';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';fnames[1]='FNAME';ftypes[1]='text';fnames[3]='ADDRESS';ftypes[3]='address';}(jQuery));var $mcj = jQuery.noConflict(true);</script>    
-      </div>
-  
-      </div>
+    </div>
+    <!-- <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[4]='PHONE';ftypes[4]='phone';fnames[7]='CAR';ftypes[7]='text';fnames[2]='SDATE';ftypes[2]='text';fnames[8]='EDATE';ftypes[8]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[5]='MMERGE5';ftypes[5]='date';fnames[6]='MMERGE6';ftypes[6]='date';}(jQuery));var $mcj = jQuery.noConflict(true);</script> -->
+    <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[2]='LNAME';ftypes[2]='text';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';fnames[1]='FNAME';ftypes[1]='text';fnames[3]='ADDRESS';ftypes[3]='address';}(jQuery));var $mcj = jQuery.noConflict(true);</script>    
+    </div>
+
     </div>
   </div>
-  </section>
+</div>
+</section>
 
 
 <section class="services p-2 mb-3 " style="margin-top: 5%;">
 
 
   <div class="grey-bg container-fluid">
-    <section id="minimal-statistics">
+    <section id="minimal-statistics" style="width: 70%; margin: auto;">
       <div class="row">
-        <div class="col-12 text-center">
+        <div class="col-12 text-center mt-5">
           <h4 class="m-3">Packages we offer</h4>
         </div>
       </div>
-      <div class="table-responsive">
-      <table class="table table-hover">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td colspan="2">Larry the Bird</td>
-            <td>@twitter</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+
+    <div class="table-responsive mt-5">
+      <p><strong>Tirupathi VIP Package</strong></p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo magnam blanditiis nulla quod sequi aliquam et impedit, voluptatum inventore, repudiandae ad non modi ex quaerat itaque ullam laboriosam nobis rem.</p>
+    <table class="table table-hover table-wrapper-scroll-y my-custom-scrollbar">
+      <thead>
+        <tr class="table-primary">
+          <th scope="col">Day</th>
+          <th scope="col">Location</th>
+          <th scope="col" colspan="2">Time</th>
+          <th scope="col">Activity</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>Tirumala</td>
+          <td colspan="2">Morning</td>
+          <td>Start early and head to Tirumala from Tirupati. The drive takes about 20-30 minutes.</td>
+        </tr>
+        <tr>
+          <th scope="row">1</th>
+          <td></td>
+          <td colspan="2">Morning to Afternoon</td>
+          <td>Visit the Sri Venkateswara Temple, also known as the Tirumala Temple. It's one of the most famous and sacred pilgrimage sites in India.</td>
+        </tr>
+        <tr>
+          <th scope="row">1</th>
+          <td></td>
+          <td colspan="2">Lunch</td>
+          <td>Enjoy a meal at one of the local restaurants or eateries near the temple complex.</td>
+        </tr>
+        <tr>
+          <th scope="row">1</th>
+          <td></td>
+          <td colspan="2">Aternoon</td>
+          <td>Explore other attractions in Tirumala such as the Sri Vari Museum, Akasa Ganga, and Silathoranam.</td>
+        </tr>
+        <tr>
+          <th scope="row">1</th>
+          <td></td>
+          <td colspan="2">Evening</td>
+          <td>Witness the evening rituals at the temple, including the beautiful 'Pavalimpu Seva' (procession of the deity's idol) and 'Ekantha Seva' (nighttime rituals).</td>
+        </tr>
+        <tr>
+          <th scope="row">1</th>
+          <td></td>
+          <td colspan="2">Dinner</td>
+          <td>Have dinner at your hotel or at one of the restaurants in Tirumala.</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>Tirupati</td>
+          <td colspan="2">Morning</td>
+          <td>Return to Tirupati early in the morning.</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td></td>
+          <td colspan="2">Breakfast</td>
+          <td>Enjoy breakfast at your hotel or a local eatery.</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td></td>
+          <td colspan="2">Morning</td>
+          <td>Visit the Sri Govindarajaswami Temple, a famous temple dedicated to Lord Vishnu.</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td></td>
+          <td colspan="2">Late Morning</td>
+          <td>Explore the Kapila Theertham, a sacred waterfall located in the lush surroundings of the Tirumala hills.</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td></td>
+          <td colspan="2">Afternoon</td>
+          <td>Visit the Sri Padmavathi Ammavari Temple, dedicated to Goddess Padmavathi, the consort of Lord Venkateswara.</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+
+  <div class="table-responsive mt-5">
+    <p><strong>Tirupathi VIP Package</strong></p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo magnam blanditiis nulla quod sequi aliquam et impedit, voluptatum inventore, repudiandae ad non modi ex quaerat itaque ullam laboriosam nobis rem.</p>
+  <table class="table table-hover table-wrapper-scroll-y my-custom-scrollbar">
+    <thead>
+      <tr class="table-primary">
+        <th scope="col">Day</th>
+        <th scope="col">Location</th>
+        <th scope="col" colspan="2">Time</th>
+        <th scope="col">Activity</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>Tirumala</td>
+        <td colspan="2">Morning</td>
+        <td>Start early and head to Tirumala from Tirupati. The drive takes about 20-30 minutes.</td>
+      </tr>
+      <tr>
+        <th scope="row">1</th>
+        <td></td>
+        <td colspan="2">Morning to Afternoon</td>
+        <td>Visit the Sri Venkateswara Temple, also known as the Tirumala Temple. It's one of the most famous and sacred pilgrimage sites in India.</td>
+      </tr>
+      <tr>
+        <th scope="row">1</th>
+        <td></td>
+        <td colspan="2">Lunch</td>
+        <td>Enjoy a meal at one of the local restaurants or eateries near the temple complex.</td>
+      </tr>
+      <tr>
+        <th scope="row">1</th>
+        <td></td>
+        <td colspan="2">Aternoon</td>
+        <td>Explore other attractions in Tirumala such as the Sri Vari Museum, Akasa Ganga, and Silathoranam.</td>
+      </tr>
+      <tr>
+        <th scope="row">1</th>
+        <td></td>
+        <td colspan="2">Evening</td>
+        <td>Witness the evening rituals at the temple, including the beautiful 'Pavalimpu Seva' (procession of the deity's idol) and 'Ekantha Seva' (nighttime rituals).</td>
+      </tr>
+      <tr>
+        <th scope="row">1</th>
+        <td></td>
+        <td colspan="2">Dinner</td>
+        <td>Have dinner at your hotel or at one of the restaurants in Tirumala.</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>Tirupati</td>
+        <td colspan="2">Morning</td>
+        <td>Return to Tirupati early in the morning.</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td></td>
+        <td colspan="2">Breakfast</td>
+        <td>Enjoy breakfast at your hotel or a local eatery.</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td></td>
+        <td colspan="2">Morning</td>
+        <td>Visit the Sri Govindarajaswami Temple, a famous temple dedicated to Lord Vishnu.</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td></td>
+        <td colspan="2">Late Morning</td>
+        <td>Explore the Kapila Theertham, a sacred waterfall located in the lush surroundings of the Tirumala hills.</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td></td>
+        <td colspan="2">Afternoon</td>
+        <td>Visit the Sri Padmavathi Ammavari Temple, dedicated to Goddess Padmavathi, the consort of Lord Venkateswara.</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
     </section>
     
   </div>
@@ -230,26 +366,21 @@
       const email = document.getElementById("userMail").value;
       document.getElementById("mce-EMAIL").value=email;
       document.getElementById("userMail").value="";
-      document.getElementById("mce-VTIME").value=setDate();
-      document.getElementById("mce1-VTIME").value=setDate();
+      document.getElementById("mce-SDATE").value=setDate();
+      document.getElementById("mce-EDATE").value=setDate();
 
     }
-    function copylocation(e){
-      let locate = e;
-      switch (locate) {
-          case 1: document.getElementById("mce-FNAME").value="Chanda nagar, Hyd";
-            break;
-          case 2: document.getElementById("mce-FNAME").value="Dhone";
-            break;
-          case 3: document.getElementById("mce-FNAME").value="Yemmiganur";
-            break;
-          case 4: document.getElementById("mce-FNAME").value="Betamcherla";
-            break;
-          default:
-            break;
-        };
-        document.getElementById("mce-VTIME").value=setDate();
-        document.getElementById("mce1-VTIME").value=setDate();
+
+    function copyCar(car){
+
+      console.log(car);
+      const email = document.getElementById("userMail").value;
+      document.getElementById("mce-EMAIL").value=email;
+      document.getElementById("userMail").value="";
+      document.getElementById("mce-CAR").selectedIndex = car;
+      // document.getElementById("mce-CAR").value=car;
+      document.getElementById("mce-SDATE").value=setDate();
+      document.getElementById("mce-EDATE").value=setDate();
 
     }
     
